# ratzilla

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  index.html  readme.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
demo/: Cargo.toml
demo/src/: app.rs  main.rs
examples/: Cargo.toml
examples/animations/: Cargo.toml  index.html
examples/animations/src/: main.rs
examples/animations_tauri/: README.md
examples/animations_tauri/src/: main.rs
examples/animations_tauri/src-tauri/: tauri.conf.json
examples/canvas_stress_test/: Cargo.toml
examples/canvas_stress_test/src/: fps.rs  main.rs
examples/canvas_waves/: Cargo.toml  index.html
examples/canvas_waves/src/: main.rs  wave_effect.rs
examples/clipboard/: Cargo.toml  index.html
examples/clipboard/src/: main.rs
examples/colors_rgb/: Cargo.toml  index.html
examples/colors_rgb/src/: main.rs
examples/cursor_issue/: Cargo.toml
examples/cursor_issue/src/: main.rs
examples/demo/: Cargo.toml  index.html
examples/demo-canvas/: Cargo.toml
examples/demo-canvas/src/: main.rs  ui.rs
examples/demo/src/: app.rs  effects.rs  lib.rs  main.rs  ui.rs
examples/demo2/: Cargo.toml  index.html
examples/demo2/src/: main.rs
examples/demo2/src/tabs/: email.rs  weather.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/minimal_canvas/: Cargo.toml
examples/minimal_canvas/src/: main.rs
examples/minimal_webgl/: Cargo.toml
examples/minimal_webgl/src/: main.rs
examples/mouse/: Cargo.toml  index.html
examples/mouse/src/: main.rs
examples/pong/: Cargo.toml  index.html
examples/pong/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: backend.rs  lib.rs  utils.rs
examples/stress_test/: Cargo.toml  index.html
examples/stress_test/src/: fps.rs  main.rs
examples/tauri/: Cargo.toml
examples/tauri/src/: main.rs
examples/text_area/: Cargo.toml  index.html
examples/text_area/src/: main.rs
examples/textarea/: Cargo.toml
examples/textarea/src/: main.rs
examples/unicode/: Cargo.toml  index.html
examples/unicode/src/: main.rs
examples/user_input/: Cargo.toml  index.html
examples/user_input/src/: main.rs
examples/website/: Cargo.toml  index.html
examples/website/src/: main.rs
examples/world_map/: Cargo.toml  index.html
examples/world_map/src/: main.rs
scripts/: build-examples.sh
src/: backend.rs  canvas_backend.rs  canvas_utils.rs  error.rs  event.rs  lib.rs  main.rs  render.rs  render_canvas.rs  utils.rs  wasm_backend.rs  widgets.rs
src/backend/: canvas.rs  canvas_import.js  color.rs  cursor.rs  dom.rs  elements.rs  event_callback.rs  mod.rs  ratzilla_canvas.js  utils.rs  webgl2.rs
src/event/: key.rs  mod.rs  mouse.rs
src/widgets/: hyperlink.rs  mod.rs
templates/simple/: Cargo.toml  README.md  index.html
