
[package]
edition = "2021"
name = "dom-test"
publish = false
version = "0.0.0"

[dependencies]
web-sys = { version = "0.3.76", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Screen',
    'console',
    'KeyboardEvent',
] }
ratatui = { version = "0.29", default-features = false }
console_error_panic_hook = "0.1.7"
