[package]
name = "ratzilla"
version = "0.0.0-alpha.0"
description = "Build terminal-themed web applications with Ratatui and WebAssembly"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.76", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Screen',
    'console',
    'KeyboardEvent',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
] }
ratatui = { version = "0.29", default-features = false }
console_error_panic_hook = "0.1.7"
