[package]
name = "ratzilla"
version = "0.0.1"
description = "Build terminal-themed web applications with Ratatui and WebAssembly"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/ratzilla"
repository = "https://github.com/orhun/ratzilla"
keywords = ["tui", "webassembly", "ratatui"]
categories = ["wasm"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2021"

[dependencies]
web-sys = { version = "0.3.76", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Screen',
    'console',
    'KeyboardEvent',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'Location',
] }
ratatui = { version = "0.29", default-features = false, features = ["all-widgets"] }
console_error_panic_hook = "0.1.7"
thiserror = "2.0.11"
