[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.3"
console_error_panic_hook = "0.1.7"
ratatui = { version = "0.29.0", default-features = false }
ratzilla = { path = "../../" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Clipboard"] }

