[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.5"
console_error_panic_hook = "0.1.7"
ratatui = { version = "0.30.0", default-features = false }
ratzilla = { path = "../../" }
examples-shared = { path = "../shared" }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["Clipboard"] }

