[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
ratzilla = { path = "../../" }
tachyonfx = { version = "0.15.0", default-features = false, features = ["web-time"] }
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"

# tui-big-text = "0.6.1"
