[package]
name = "demo2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
indoc = "2.0.6"
itertools = "0.14.0"
palette = "0.7.6"
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
ratzilla = { path = "../../" }
strum = { version = "0.27.2", features = ["derive"] }
time = "0.3.44"
unicode-width = "0.2.0"
examples-shared = { path = "../shared" }
